gadjid/src/snapshots/gadjid__test__big-DAG4-vs-DAG5.snap
---
source: src/lib.rs
expression: "test(&format!(\"100{:0>2}.DAG-100\", true_id),\n    &format!(\"100{:0>2}.DAG-100\", guess_id))"
---
g_true: 10004.DAG-100
g_guess: 10005.DAG-100
ancestor_aid:
  - 0.0044444444444444444
  - 44
oset_aid:
  - 0.02878787878787879
  - 285
parent_aid:
  - 0.08464646464646465
  - 838
shd:
  - 0.005454545454545455
  - 27
T:
  - 0
  - 2
  - 3
  - 5
  - 6
  - 11
  - 16
  - 18
  - 19
  - 20
  - 21
  - 22
  - 29
  - 31
  - 42
  - 45
  - 47
  - 52
  - 56
  - 57
  - 58
  - 59
  - 63
  - 69
  - 71
  - 72
  - 74
  - 76
  - 77
  - 78
  - 79
  - 84
  - 85
  - 86
  - 89
  - 93
  - 94
  - 95
  - 96
  - 98
  - 99
NAM: []
Y: 50
random_adj:
  - 7
  - 8
  - 10
  - 13
  - 14
  - 15
  - 17
  - 23
  - 26
  - 27
  - 28
  - 30
  - 32
  - 33
  - 34
  - 35
  - 37
  - 38
  - 39
  - 40
  - 41
  - 43
  - 44
  - 48
  - 49
  - 53
  - 54
  - 55
  - 60
  - 61
  - 62
  - 64
  - 66
  - 67
  - 68
  - 70
  - 75
  - 80
  - 81
  - 82
  - 83
  - 87
  - 88
  - 90
  - 91
  - 92
  - 97
proper_ancestors:
  - 1
  - 4
  - 7
  - 8
  - 9
  - 10
  - 12
  - 13
  - 14
  - 15
  - 17
  - 23
  - 24
  - 25
  - 26
  - 30
  - 33
  - 35
  - 37
  - 38
  - 40
  - 43
  - 48
  - 50
oset:
  - 0
  - 1
  - 2
  - 4
  - 6
  - 7
  - 10
  - 13
  - 21
  - 23
possible_descendants:
  - 0
  - 2
  - 3
  - 5
  - 6
  - 8
  - 9
  - 11
  - 12
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
parent_adjustment_NVA:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 95
  - 96
  - 97
ancestor_adjustment_NVA:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 95
  - 96
  - 97
nondescendant_adjustment_NVA:
  - 1
  - 4
  - 7
  - 8
  - 9
  - 10
  - 12
  - 13
  - 14
  - 15
  - 17
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 30
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 43
  - 44
  - 46
  - 48
  - 49
  - 50
  - 51
  - 53
  - 54
  - 55
  - 60
  - 61
  - 62
  - 64
  - 65
  - 66
  - 67
  - 68
  - 70
  - 73
  - 75
  - 80
  - 81
  - 82
  - 83
  - 87
  - 88
  - 90
  - 91
  - 92
  - 97
oset_adjustment_NVA:
  - 0
  - 1
  - 2
  - 4
  - 6
  - 7
  - 8
  - 9
  - 10
  - 12
  - 13
  - 14
  - 15
  - 17
  - 21
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 30
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 43
  - 44
  - 46
  - 48
  - 49
  - 50
  - 51
  - 53
  - 54
  - 55
  - 60
  - 61
  - 62
  - 64
  - 65
  - 66
  - 67
  - 68
  - 70
  - 73
  - 75
  - 80
  - 81
  - 82
  - 83
  - 87
  - 88
  - 90
  - 91
  - 92
  - 97
empty_adjustment_NVA:
  - 1
  - 4
  - 7
  - 8
  - 9
  - 10
  - 12
  - 13
  - 14
  - 15
  - 17
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 30
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 43
  - 44
  - 46
  - 48
  - 49
  - 50
  - 51
  - 53
  - 54
  - 55
  - 60
  - 61
  - 62
  - 64
  - 65
  - 66
  - 67
  - 68
  - 70
  - 73
  - 75
  - 80
  - 81
  - 82
  - 83
  - 87
  - 88
  - 90
  - 91
  - 92
  - 97
random_Z_adjustment_NVA:
  - 1
  - 4
  - 7
  - 8
  - 9
  - 10
  - 12
  - 13
  - 14
  - 15
  - 17
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 30
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 43
  - 44
  - 46
  - 48
  - 49
  - 50
  - 51
  - 53
  - 54
  - 55
  - 60
  - 61
  - 62
  - 64
  - 65
  - 66
  - 67
  - 68
  - 70
  - 73
  - 75
  - 80
  - 81
  - 82
  - 83
  - 87
  - 88
  - 90
  - 91
  - 92
  - 97
