gadjid/src/snapshots/gadjid__test__big-DAG7-vs-DAG8.snap
---
source: src/lib.rs
expression: "test(\"10007.DAG-100\", \"10008.DAG-100\")"
---
g_true: 10007.DAG-100
g_guess: 10008.DAG-100
ts:
  - 75
  - 2
  - 45
  - 86
  - 43
ys:
  - 38
  - 0
  - 20
  - 74
  - 89
zs:
  - - 1
    - 2
    - 6
    - 7
    - 8
    - 9
    - 13
    - 15
    - 17
    - 18
    - 19
    - 20
    - 21
    - 22
    - 23
    - 33
    - 34
    - 35
    - 36
    - 38
    - 39
    - 41
    - 42
    - 45
    - 47
    - 48
    - 50
    - 52
    - 53
    - 56
    - 57
    - 58
    - 59
    - 61
    - 62
    - 63
    - 64
    - 65
    - 68
    - 70
    - 71
    - 72
    - 73
  - - 0
    - 1
  - - 1
    - 2
    - 3
    - 4
    - 6
    - 9
    - 10
    - 12
    - 15
    - 16
    - 17
    - 19
    - 20
    - 22
    - 27
    - 29
    - 31
    - 34
    - 35
    - 36
    - 37
    - 38
    - 39
    - 40
    - 42
    - 43
  - - 2
    - 3
    - 5
    - 7
    - 9
    - 12
    - 13
    - 17
    - 18
    - 27
    - 28
    - 29
    - 30
    - 32
    - 35
    - 37
    - 38
    - 39
    - 40
    - 42
    - 44
    - 46
    - 49
    - 50
    - 51
    - 54
    - 55
    - 57
    - 66
    - 67
    - 68
    - 70
    - 72
    - 75
    - 76
    - 79
    - 81
    - 82
    - 84
    - 85
  - - 0
    - 1
    - 2
    - 3
    - 7
    - 9
    - 14
    - 15
    - 17
    - 18
    - 23
    - 30
    - 31
    - 32
    - 33
    - 34
    - 36
    - 37
    - 38
    - 41
nams:
  - []
  - []
  - []
  - []
  - []
nvas:
  - - 1
    - 2
    - 6
    - 7
    - 8
    - 9
    - 13
    - 15
    - 17
    - 18
    - 19
    - 20
    - 21
    - 22
    - 23
    - 33
    - 34
    - 35
    - 36
    - 38
    - 39
    - 41
    - 42
    - 45
    - 47
    - 48
    - 50
    - 52
    - 53
    - 56
    - 57
    - 58
    - 59
    - 61
    - 62
    - 63
    - 64
    - 65
    - 68
    - 70
    - 71
    - 72
    - 73
  - - 0
    - 1
  - - 1
    - 2
    - 3
    - 4
    - 6
    - 9
    - 10
    - 12
    - 15
    - 16
    - 17
    - 19
    - 20
    - 22
    - 27
    - 29
    - 31
    - 34
    - 35
    - 36
    - 37
    - 38
    - 39
    - 40
    - 42
    - 43
  - - 0
    - 1
    - 2
    - 3
    - 4
    - 5
    - 6
    - 7
    - 8
    - 9
    - 10
    - 11
    - 12
    - 13
    - 14
    - 15
    - 16
    - 17
    - 18
    - 19
    - 20
    - 21
    - 22
    - 23
    - 24
    - 25
    - 26
    - 27
    - 28
    - 29
    - 30
    - 31
    - 32
    - 33
    - 34
    - 35
    - 36
    - 37
    - 38
    - 39
    - 40
    - 41
    - 42
    - 43
    - 44
    - 45
    - 46
    - 47
    - 48
    - 49
    - 50
    - 51
    - 52
    - 53
    - 54
    - 55
    - 56
    - 57
    - 58
    - 59
    - 60
    - 61
    - 62
    - 63
    - 64
    - 65
    - 66
    - 67
    - 68
    - 69
    - 70
    - 71
    - 72
    - 73
    - 74
    - 75
    - 76
    - 77
    - 78
    - 79
    - 80
    - 81
    - 82
    - 83
    - 84
    - 85
    - 87
    - 88
    - 89
    - 90
    - 91
    - 92
    - 93
    - 94
    - 95
    - 96
    - 97
    - 98
    - 99
  - - 0
    - 1
    - 2
    - 3
    - 7
    - 9
    - 14
    - 15
    - 17
    - 18
    - 23
    - 30
    - 31
    - 32
    - 33
    - 34
    - 36
    - 37
    - 38
    - 41
pa_true_1st_T:
  - 1
  - 2
  - 6
  - 7
  - 8
  - 9
  - 13
  - 15
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 34
  - 35
  - 36
  - 38
  - 39
  - 41
  - 42
  - 45
  - 47
  - 48
  - 50
  - 52
  - 53
  - 56
  - 57
  - 58
  - 59
  - 61
  - 62
  - 63
  - 64
  - 65
  - 68
  - 70
  - 71
  - 72
  - 73
an_true_1st_T:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 75
ch_true_1st_T:
  - 76
  - 77
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 96
  - 98
  - 99
de_true_1st_T:
  - 75
  - 76
  - 77
  - 78
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
poss_de_true_1st_T:
  - 75
  - 76
  - 77
  - 78
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
prop_an_true_1st_T_and_1st_Y:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
shd:
  - 0.00808080808080808
  - 40
oset_aid:
  - 0.008686868686868687
  - 86
parent_aid:
  - 0.14505050505050504
  - 1436
ancestor_aid:
  - 0
  - 0
