gadjid/src/snapshots/gadjid__test__large-CPDAG01-vs-CPDAG02.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 10001.CPDAG-100
g_guess: 10002.CPDAG-100
ancestor_aid:
  - 0
  - 0
oset_aid:
  - 0.023636363636363636
  - 234
parent_aid:
  - 0.04080808080808081
  - 404
shd:
  - 0.006464646464646465
  - 32
t:
  - 1
  - 2
  - 5
  - 6
  - 7
  - 9
  - 11
  - 12
  - 13
  - 14
  - 16
  - 19
  - 20
  - 21
  - 23
  - 25
  - 26
  - 27
  - 28
  - 29
  - 36
  - 37
  - 38
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 49
  - 53
  - 54
  - 55
  - 58
  - 61
  - 62
  - 64
  - 69
  - 71
  - 73
  - 74
  - 75
  - 79
  - 80
  - 81
  - 84
  - 85
  - 86
  - 88
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 98
  - 99
y: 56
z:
  - 8
  - 18
  - 24
  - 31
  - 63
  - 65
  - 67
  - 72
  - 77
  - 82
  - 87
possible_descendants_of_t_in_g_guess:
  - 0
  - 1
  - 2
  - 3
  - 5
  - 6
  - 7
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
not_amenable_in_g_guess_wrt_t:
  - 0
  - 3
  - 10
  - 15
  - 17
  - 18
  - 22
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 39
  - 47
  - 48
  - 50
  - 51
  - 52
  - 56
  - 57
  - 59
  - 60
  - 63
  - 65
  - 66
  - 67
  - 68
  - 70
  - 72
  - 76
  - 77
  - 78
  - 82
  - 83
  - 87
  - 89
  - 90
  - 97
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 0
  - 3
  - 4
  - 10
  - 18
  - 56
oset_for_t_onto_y_in_g_guess:
  - 0
  - 2
  - 3
  - 4
  - 9
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 96
  - 97
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 0
  - 2
  - 3
  - 4
  - 8
  - 9
  - 10
  - 15
  - 17
  - 18
  - 22
  - 24
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 39
  - 47
  - 48
  - 50
  - 51
  - 52
  - 56
  - 57
  - 59
  - 60
  - 63
  - 65
  - 66
  - 67
  - 68
  - 70
  - 72
  - 76
  - 77
  - 78
  - 82
  - 83
  - 87
  - 89
  - 90
  - 97
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 0
  - 3
  - 4
  - 8
  - 10
  - 15
  - 17
  - 18
  - 22
  - 24
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 39
  - 47
  - 48
  - 50
  - 51
  - 52
  - 56
  - 57
  - 59
  - 60
  - 63
  - 65
  - 66
  - 67
  - 68
  - 70
  - 72
  - 76
  - 77
  - 78
  - 82
  - 83
  - 87
  - 89
  - 90
  - 97
not_validly_adjusted_for_in_g_guess_by_z:
  - 0
  - 3
  - 4
  - 8
  - 10
  - 15
  - 17
  - 18
  - 22
  - 24
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 39
  - 47
  - 48
  - 50
  - 51
  - 52
  - 56
  - 57
  - 59
  - 60
  - 63
  - 65
  - 66
  - 67
  - 68
  - 70
  - 72
  - 76
  - 77
  - 78
  - 82
  - 83
  - 87
  - 89
  - 90
  - 97
