gadjid/src/snapshots/gadjid__test__large-CPDAG02-vs-CPDAG03.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 10002.CPDAG-100
g_guess: 10003.CPDAG-100
ancestor_aid:
  - 0.016464646464646463
  - 163
oset_aid:
  - 0.03464646464646465
  - 343
parent_aid:
  - 0.07909090909090909
  - 783
shd:
  - 0.006262626262626263
  - 31
t:
  - 0
  - 1
  - 3
  - 4
  - 5
  - 9
  - 10
  - 12
  - 13
  - 14
  - 16
  - 18
  - 21
  - 22
  - 23
  - 27
  - 28
  - 29
  - 30
  - 32
  - 33
  - 35
  - 36
  - 40
  - 41
  - 42
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 59
  - 60
  - 62
  - 66
  - 68
  - 75
  - 77
  - 78
  - 79
  - 80
  - 82
  - 83
  - 84
  - 87
  - 88
  - 89
  - 90
  - 92
  - 94
  - 96
  - 97
  - 98
  - 99
y: 52
z:
  - 8
  - 11
  - 20
  - 25
  - 34
  - 37
  - 67
  - 71
  - 73
  - 86
  - 91
  - 95
possible_descendants_of_t_in_g_guess:
  - 0
  - 1
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
not_amenable_in_g_guess_wrt_t:
  - 7
  - 8
  - 11
  - 15
  - 17
  - 19
  - 20
  - 25
  - 26
  - 31
  - 34
  - 37
  - 38
  - 39
  - 43
  - 44
  - 45
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 61
  - 63
  - 64
  - 65
  - 67
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 76
  - 81
  - 85
  - 86
  - 91
  - 93
  - 95
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 52
oset_for_t_onto_y_in_g_guess:
  - 4
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 95
  - 96
  - 97
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 2
  - 4
  - 6
  - 7
  - 8
  - 11
  - 15
  - 17
  - 19
  - 20
  - 24
  - 25
  - 26
  - 31
  - 34
  - 37
  - 38
  - 39
  - 43
  - 44
  - 45
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 61
  - 63
  - 64
  - 65
  - 67
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 76
  - 81
  - 85
  - 86
  - 91
  - 93
  - 95
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 2
  - 6
  - 7
  - 8
  - 11
  - 15
  - 17
  - 19
  - 20
  - 24
  - 25
  - 26
  - 31
  - 34
  - 37
  - 38
  - 39
  - 43
  - 44
  - 45
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 61
  - 63
  - 64
  - 65
  - 67
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 76
  - 81
  - 85
  - 86
  - 91
  - 93
  - 95
not_validly_adjusted_for_in_g_guess_by_z:
  - 2
  - 6
  - 7
  - 8
  - 11
  - 15
  - 17
  - 19
  - 20
  - 24
  - 25
  - 26
  - 31
  - 34
  - 37
  - 38
  - 39
  - 43
  - 44
  - 45
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 61
  - 63
  - 64
  - 65
  - 67
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 76
  - 81
  - 85
  - 86
  - 91
  - 93
  - 95
